--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -6,7 +6,9 @@
 .header {
     width: 100%;
     height: 50px;
-    background-color: color.adjust(v.$color_white, $alpha: -0.85);
+    // background-color: color.adjust(v.$color_blue, $alpha: -0.85);
+    background-color: v.$color_blue;
+
     // border-bottom: 1px solid v.$color_white;
     border: {
         bottom: {
@@ -43,8 +45,8 @@
             flex-grow: 1;
 
             .list {
-                @include m.d-flex(start, center, nowrap, row, 100px, 0);
-                padding: 0 0 0 100px;
+                @include m.d-flex(start, center, nowrap, row, min(100px, 5vw), 0);
+                padding: 0 0 0 min(100px, 5vw);
 
                 &__item {
                     &-link {
@@ -52,8 +54,15 @@
                         font-weight: 400;
                         color: v.$color_white;
 
-                        @extend %hover-black
+                        @extend %hover-black;
                     }
+                }
+            }
+
+            @media (max-width: v.$media_lg) {
+                .list {
+                    @include m.d-flex(center, center, nowrap, row, min(100px, 5vw), 0);
+                    padding: 0 0 0 0;
                 }
             }
         }
