--- a/styles/_basic.scss
+++ b/styles/_basic.scss
@@ -21,7 +21,7 @@ li {
     list-style: none;
 }
 
-figure {
+figure, blockquote {
     margin: 0;
 }
 
@@ -29,6 +29,7 @@ hr {
     margin: 0;
     width: 100%;
 }
+
 
 .container {
     max-width: 1440px;
